Mise à jour globale et ajout de la page services

--- a/contact.html
+++ b/contact.html
@@ -10,19 +10,19 @@
 
 <body>
     <div>
-        <h1 class="index-title1">AR • Design</h1>
-
-        <nav class="index-nav">
+        <nav class="main-nav">
             <a href="index.html">Accueil</a>
             <a href="projets.html">Projets</a>
             <a href="Services.html">Services</a>
             <a href="contact.html">Contact</a>
         </nav>
+
+        <h1>AR • Design</h1>
+        <h2>Contact</h2>
     </div>
 
+<main>
     <section>
-        <h2 class="index-title2">Contact</h2>
-
             <p>Tel. 0492/31.30.68</p>
             <p>Mail. anaisromedesign@hotmail.com</p>
             <p>Grand'Ry 244 - 4860 Cornesse</p>
@@ -31,7 +31,6 @@
     </section>
 
     <section>
-        <h2 class="index-title2">Demande de rendez-vous :</h2>
             <form action="contact.html">
                 <fieldset>
                 <legend>Laissez-moi vos coordonnées</legend>
@@ -61,11 +60,12 @@
             </div>
             <input type="submit" value="Envoyer">
             </fieldset>
-            </form><br>
+            </form><br> 
     </section>
+</main>
 
     <div>
-        <footer class="index-footer">
+        <footer>
                 AR • Design - Architecture d'intérieur<br>
                 Grand'Ry 244 B-4860 Cornesse<br>
                 mail. anaisromedesign@hotmail.com<br>
