--- a/projet1.html
+++ b/projet1.html
@@ -12,26 +12,30 @@
 <body>
 
     <div>
-        <header class="index-header">
-            <h1 class="index-title1">AR • Design</h1>
-            <h2 class="index-title2">Projet Grand'Ry | Le bureau</h2>
-            
-            <nav class="index-nav">
+        <header>
+            <nav class="main-nav">
                 <a href="index.html">Accueil</a>
                 <a href="projets.html">Projets</a>
                 <a href="Services.html">Services</a>
                 <a href="contact.html">Contact</a>
             </nav>
+
+            <h1>AR • Design</h1>
+            <h2>Projet Grand'Ry | Le bureau</h2>
         </header>
     </div>
 
-    <main class="projet1">
+    <main>
         <div>
             <p>Ce projet consistait à transformer un bureau existant en un espace à la fois fonctionnel, chaleureux et personnel. Le sol d’origine, recouvert d’un carrelage froid, a été rénové grâce à l’application d’une <strong>résine couleur sable</strong>, apportant immédiatement <strong>lumière et douceur</strong> à la pièce.</p>
             <p>Le mur principal a été habillé d’un <strong>papier peint panoramique</strong> de la marque italienne <em>Glamora</em>, véritable coup de cœur. Son motif végétal évoque la savane et donne à la pièce une identité forte et poétique.</p>
             <p>L’<strong>ameublement en chêne massif</strong>, chiné avec soin, compose un décor intemporel, ponctué d’une <strong>chaise de bureau de M. Thonet</strong>, pour une touche design et authentique. L’ajout de plantes naturelles accentue la sensation de calme et de sérénité.</p>
             <p>Enfin, pour ancrer ce lieu dans une dimension plus intime, j’ai choisi d’y exposer <strong>des photos prises par mon grand-père lors de son voyage au Congo dans les années 1950</strong>. Agrandies et encadrées, elles donnent une âme particulière à l’espace et racontent une histoire chère à mon cœur.</p>
             <p>Ce projet illustre parfaitement ce que j’aime faire : <strong>faire dialoguer mémoire et modernité</strong> pour créer des intérieurs qui ont du sens.</p>
+        </div>
+
+        <div class="cta-contact">
+            <a href="contact.html" class="bouton-contact">Je prends rendez-vous</a>     
         </div>
 
         <div>
@@ -48,7 +52,7 @@
     </main>
 
     <div>
-        <footer class="index-footer">
+        <footer>
                 AR • Design - Architecture d'intérieur<br>
                 Grand'Ry 244 B-4860 Cornesse<br>
                 mail. anaisromedesign@hotmail.com<br>
