--- a/projets.html
+++ b/projets.html
@@ -12,50 +12,50 @@
 <body>
 
     <div>
-        <header class="index-header">
-            <h1 class="index-title1">AR • Design</h1>
-            <h2 class="index-title2">Projets</h2>
-            
-            <nav class="index-nav">
+        <header>
+            <nav class="main-nav">
                 <a href="index.html">Accueil</a>
                 <a href="projets.html">Projets</a>
                 <a href="Services.html">Services</a>
                 <a href="contact.html">Contact</a>
             </nav>
+
+            <h1>AR • Design</h1>
+            <h2>Projets</h2>
         </header>
     </div>
 
-        <main class="projets">
+        <main>
 
-            <article class="projet1">
+            <article>
                 <a href="projet1.html" target="_blank">
                 <h3>Projet Grand'Ry | Le bureau</h3>
                 <img src="img/bureau-grandry/bureau-grandry1.jpg" alt="Projet Grand'Ry : le bureau">
                 </a>
             </article>
 
-            <article class="projet2">
+            <article>
                 <a href="projet2.html" target="_blank">
                 <h3>Projet Grand'Ry | La chambre</h3>
                 <img src="img/chambre-grandry/chambre-grandry1.jpg" alt="Projet Grand'Ry : la chambre">
                 </a>
             </article>
 
-            <article class="projet3">
+            <article>
                 <a href="projet3.html" target="_blank">
                 <h3>Projet Rotheux | L'annexe</h3>
                 <img src="img/annexe-rotheux/annexe-rotheux1.jpg" alt="Projet Rotheux : l'annexe">
                 </a>
             </article>
 
-            <article class="projet4">
+            <article>
                 <a href="projet4.html" target="_blank">
                 <h3>Projet Grande Rhée | La chambre</h3>
                 <img src="img/chambre-granderhee/chambre-granderhee1.jpg" alt="Projet Grande Rhée : la chambre">
                 </a>
             </article>
 
-            <article class="projet5">
+            <article>
                 <a href="projet5.html" target="_blank">
                 <h3>Projet Olyff | La cuisine</h3>
                 <img src="img/cuisine-olyff/cuisine-olyff1.jpg" alt="Projet Olyff : la cuisine">
@@ -65,7 +65,7 @@
         </main>
 
         <div>
-            <footer class="index-footer">
+            <footer>
                     AR • Design - Architecture d'intérieur<br>
                     Grand'Ry 244 B-4860 Cornesse<br>
                     mail. anaisromedesign@hotmail.com<br>
