Mise à jour : style des services, bouton centré, texte justifié

--- a/contact.html
+++ b/contact.html
@@ -28,12 +28,12 @@
             <p>Grand'Ry 244 - 4860 Cornesse</p>
 
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2533.8334729767334!2d5.802807876068292!3d50.574460078427705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c08bc65f4ce1e1%3A0xcb965f6153c03759!2sAR%20Design%20-%20Bureau%20d&#39;architecture%20d&#39;int%C3%A9rieur!5e0!3m2!1sfr!2sbe!4v1743104038655!5m2!1sfr!2sbe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </section>
+    </section><br>
 
     <section>
             <form action="contact.html">
-                <fieldset>
-                <legend>Laissez-moi vos coordonnées</legend>
+                
+                <legend>Demande de contact :</legend>
             <div>
                 <label for="nameinput">Nom</label>
                 <input type="text" name="nom" id="nameinput" required placeholder="Bazartotal">
@@ -58,8 +58,12 @@
                 <label for="textareainput">Donnez une brève description de votre projet</label>
                 <textarea cols="50" rows="20" name="textarea" id="textareainput" placeholder="J’aimerais transformer mon salon en palais digne de Versailles (mais avec des prises USB). Actuellement, c’est un mélange improbable entre un bureau, une salle de jeux et un refuge pour plantes en détresse. Je rêve d’un espace élégant, fonctionnel et surtout rangé (enfin, au moins deux jours par semaine). Ah, et si on pouvait agrandir visuellement la pièce sans pousser les murs, ce serait parfait !"></textarea>
             </div>
-            <input type="submit" value="Envoyer">
-            </fieldset>
+
+            <div class="lien-bouton-container">
+            <input class="lien-bouton" type="submit" value="Envoyer">
+            </div>
+
+            
             </form><br> 
     </section>
 </main>
