--- a/projet1.html
+++ b/projet1.html
@@ -26,7 +26,7 @@
     </div>
 
     <main>
-        <div>
+        <div class="projet1-texte">
             <p>Ce projet consistait à transformer un bureau existant en un espace à la fois fonctionnel, chaleureux et personnel. Le sol d’origine, recouvert d’un carrelage froid, a été rénové grâce à l’application d’une <strong>résine couleur sable</strong>, apportant immédiatement <strong>lumière et douceur</strong> à la pièce.</p>
             <p>Le mur principal a été habillé d’un <strong>papier peint panoramique</strong> de la marque italienne <em>Glamora</em>, véritable coup de cœur. Son motif végétal évoque la savane et donne à la pièce une identité forte et poétique.</p>
             <p>L’<strong>ameublement en chêne massif</strong>, chiné avec soin, compose un décor intemporel, ponctué d’une <strong>chaise de bureau de M. Thonet</strong>, pour une touche design et authentique. L’ajout de plantes naturelles accentue la sensation de calme et de sérénité.</p>
@@ -34,9 +34,9 @@
             <p>Ce projet illustre parfaitement ce que j’aime faire : <strong>faire dialoguer mémoire et modernité</strong> pour créer des intérieurs qui ont du sens.</p>
         </div>
 
-        <div class="cta-contact">
-            <a href="contact.html" class="bouton-contact">Je prends rendez-vous</a>     
-        </div>
+        <div class="lien-bouton-container">
+            <a class="lien-bouton" href="contact.html" class="bouton-contact">Je prends rendez-vous</a>     
+        </div><br><br>
 
         <div>
                 <img src="img/bureau-grandry/bureau-grandry1.jpg" alt="Projet Grand'Ry : le bureau">
