--- a/index.html
+++ b/index.html
@@ -28,19 +28,22 @@
 <main>
         <article>
             <h2>A propos</h2>
-            <p>Anaïs Rome Design vous aide à concrétiser vos projets d'architecture d'intérieur en province de Liège.
+            <div class="index-texte"><p>Anaïs Rome Design vous aide à concrétiser vos projets d'architecture d'intérieur en province de Liège.
             <strong>Donner vie à vos espaces, en accord avec votre histoire.</strong><br><br>
             <strong>AR • Design</strong>, c’est un bureau d’architecture d’intérieur à taille humaine, basé en province de Liège, qui vous accompagne dans vos projets d’aménagement avec <strong>sensibilité</strong>, <strong>précision</strong> et <strong>écoute</strong>.<br><br>
             Qu’il s’agisse d’optimiser une pièce de vie, de rénover un bureau ou de repenser un lieu de manière plus globale, je vous aide à révéler le <strong>plein potentiel de votre intérieur</strong> — en harmonie avec votre style et votre rythme de vie.<br><br>
             Chaque projet est pensé <strong>sur mesure</strong>, avec un regard professionnel, une attention portée aux détails et un vrai souci du beau… <strong>mais surtout du juste</strong>.
-            </p>
+            </p></div>
             
-            <a href="projets.html">Découvrez nos réalisations !</a><br><br>
+    <div class="lien-bouton-container">
+            <a class="lien-bouton" href="projets.html">Découvrez nos réalisations !</a>
+    </div>
+
             <video class="video-accueil" src="video/annexe-rotheux.mp4" controls loop></video>
         </article>
 
-    <div class="cta-contact">
-        <a href="contact.html" class="bouton-contact">Je prends rendez-vous</a>     
+    <div class="lien-bouton-container">
+        <a class="lien-bouton" href="contact.html" class="bouton-contact">Je prends rendez-vous</a>     
     </div>
 </main>
 
